attempt to fix scrollbars in embed container

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1505,4 +1505,5 @@ a.newer-posts:hover {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
